# tamarindo_engine

./: .gitignore  .gitmodules  .licensure.yml  CMakeLists.txt  CMakeSettings.json  Cargo.toml  LICENSE  LICENSE.txt  README.md  TamarindoEngine.sln  TamarindoEngine.vcxproj  build.rs  defines.lua  dependencies.lua  premake5.lua  vcpkg.json
VS22_migration/TamarindoEngine/: TamarindoEngine.sln
VS22_migration/TamarindoEngine/Editor/: main.cc
VS22_migration/TamarindoEngine/engine/logging/: logger.cc  logger.h
cmake/: CMakeLists.txt
cmake/engine_lib/: CMakeLists.txt
cmake/engine_lib/input/: input_defs.h  keyboard.h
cmake/engine_lib/logging/: CMakeLists.txt
cmake/engine_lib/rendering/: CMakeLists.txt  buffers.cc  buffers.h  gltf_model.cc  gltf_model.h  imgui_renderer.cc  imgui_renderer.h  material.h  render_state.cc  render_state.h  renderer.h  scene_renderer.cc  scene_renderer.h  vertex_input.h  window.cc  window.h
cmake/engine_lib/rendering/shaders/: CMakeLists.txt  solid_color_ps.hlsl  solid_color_vs.hlsl
cmake/engine_lib/utils/: CMakeLists.txt  macros.h  timer.cc  timer.h
cmake/engine_lib/world/: camera.h  scene.h
cmake/tamarindo_editor/: CMakeLists.txt
editor/: Editor.vcxproj.filters  application.cc  application.h  editor.vcxproj  editor.vcxproj.filters  game_data.cc  game_data.h  main.cc  rendering_data.h  transform.cc  transform.h
engine/camera/: camera.vcxproj  camera.vcxproj.filters  orthographic_camera.cc  orthographic_camera.h  perspective_camera.cc  perspective_camera.h  spherical_camera.cc  spherical_camera.h  spherical_camera_controller.cc  spherical_camera_controller.h
engine/input/: input.vcxproj  input.vcxproj.filters  input_defs.h  keyboard.cc  keyboard.h
engine/logging/: logger.cc  logger.h  logging.vcxproj  logging.vcxproj.filters  scoped_windows_console.cc  scoped_windows_console.h
engine/rendering/: buffers.cc  buffers.h  matrix_constant_buffer.cc  matrix_constant_buffer.h  model.cc  model.h  model_data.cc  model_data.h  render_state.cc  render_state.h  renderer.cc  renderer.h  rendering.vcxproj  rendering.vcxproj.filters  shader.cc  shader.h  shader_builder.cc  shader_builder.h  vertex_buffer.cc  vertex_buffer.h
engine/utils/: macros.h  timer.cc  timer.h  utils.vcxproj  utils.vcxproj.filters
engine/window/: window.cc  window.h  window.vcxproj  window.vcxproj.filters  window_event_handler.h
engine_lib/: CMakeLists.txt
engine_lib/core/: application.cc  application.h  entry_point.cc  timer.cc  timer.h  window_manager.cc  window_manager.h
engine_lib/input/: CMakeLists.txt  input_manager.cc  input_manager.h  keyboard.cc
engine_lib/logging/: CMakeLists.txt  logger.cc  logger.h
engine_lib/rendering/: CMakeLists.txt  camera.cc  camera_interface.h  game_object.h  gltf_model.cc  gltf_model.h  imgui_renderer.cc  material.cc  mesh.cc  mesh.h  model.h  render_state.cc  render_state.h  renderer.cc  renderer.h  rendering_manager.cc  rendering_manager.h  resources_manager.cc  scene.cc  scene_renderer.cc  shader_program.cc  solid_color_shader.cc  solid_color_shader.h  window.cc  window.h  window_event_handler.h
engine_lib/rendering/shaders/: CMakeLists.txt  solid_color_vs.hlsl
engine_lib/utils/: CMakeLists.txt  macros.h
engine_lib/world/: camera.cc  game_object.cc  game_object.h  scene.cc  scene.h
include/engine_lib/core/: entry_point.h
include/engine_lib/input/: input_manager.h
include/engine_lib/rendering/: resources_manager.h  scene_renderer.h  shader_program.h
include/engine_lib/world/: camera.h  game_object.h  scene.h
premake/: dependencies.lua  premake5.lua
res/: app_config.yaml  project_conf.yaml
res/shaders/: shader.wgsl
rust/tamarindo_engine/: .licensure.yml  Cargo.toml
rust/tamarindo_engine/res/: app_config.yaml
rust/tamarindo_engine/res/shaders/: shader.wgsl
rust/tamarindo_engine/src/: application.rs  application_config.rs  camera.rs  config.rs  error.rs  instance.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  window_state.rs
rust/tamarindo_engine/src/render/: buffer.rs  mod.rs  render_pass.rs  shader.wgsl  shapes.rs  texture.rs
sample_project/: sample_data.xml  sample_project.xml  sample_scene.xml
sample_project/meshes/cube/: vert0.txt  vert1.txt  vert2.txt  vert3.txt  vert4.txt  vert5.txt
scripts/: build_project.sh  build_vs19.bat  build_vs22.bat
sources/: .clang-format  premake5.lua
sources/engine_lib/: premake5.lua
sources/engine_lib/engine_lib/: hello.cpp  hello.h
sources/engine_lib/engine_lib/core/: application.cc  application.cpp  application.h  entry_point.cc  entry_point.cpp  entry_point.h  timer.cc  timer.h  window_manager.cc  window_manager.cpp  window_manager.h
sources/engine_lib/engine_lib/input/: input_defs.h  input_manager.cpp  input_manager.h
sources/engine_lib/engine_lib/logging/: logger.cc  logger.cpp  logger.h
sources/engine_lib/engine_lib/rendering/: geometry_generator.cc  geometry_generator.cpp  geometry_generator.h  gltf_mesh.cc  gltf_mesh.h  gltf_mesh_test.cc  gltf_model.cc  gltf_model.h  imgui_renderer.cc  imgui_renderer.h  material.cc  material.h  mesh.cc  mesh.cpp  mesh.h  mesh_interface.h  model.h  renderer.cc  renderer.h  rendering_asset.h  rendering_manager.cc  rendering_manager.h  resources_manager.cc  resources_manager.h  scene_renderer.cc  scene_renderer.h  shader_program.cc  shader_program.cpp  (+1 more)
sources/game_app/: game_app.cc  game_app.cpp  game_app.h  main.cc  main.cpp  premake5.lua
sources/tamarindo_editor/: editor.cc  editor.h  imgui_renderer.cc  imgui_renderer.h  main.cc  premake5.lua  project.cc  project.h  scene.cc  scene.h  scene_renderer.cc  scene_renderer.h  xml_parser.cc  xml_parser.h  xml_scene_parser.cc
src/: application.rs  assets_bank.rs  camera.rs  entry_point.rs  error.rs  input.rs  instance.rs  lib.rs  model.rs  pass.rs  shader.rs  texture.rs  window_state.rs
src/render/: bind_group.rs  mod.rs  model.rs  pass.rs  pipeline.rs  render_pass.rs  shader.rs  state.rs  texture.rs
src/resources/: mesh.rs  mod.rs  model.rs  texture.rs
tamarindo_editor/: CMakeLists.txt  application.cc  application.h  editor.cc  editor.h  main.cc
(+11 files in other folders)
