[package]
name = "tamarindo_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0.38"
tobj = { version = "3.2.1", features = [
    "async",
]}
ulid = "1.0.0"
wgpu = "0.14.2"
winit = "0.27.5"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.68"
fs_extra = "1.2"
glob = "0.3"
