[package]
name = "tamarindo_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0.38"
wgpu = "0.14.2"
winit = "0.27.5"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
